<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/coordenation_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <com.video.youtuberplayer.ui.view.widget.SplashVideoView
    android:id="@+id/videoView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="60dp"
      android:orientation="vertical">

      <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:src="@drawable/youtube_icon"/>

      <android.support.v7.widget.AppCompatImageView
        android:id="@+id/title_app"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:srcCompat="@drawable/ic_logo"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="bottom"
      android:layout_marginBottom="10dp"
      android:gravity="bottom"
      android:orientation="vertical">

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_google_button"
        style="@style/LoginButtonStyle"
        android:layout_gravity="bottom"
        android:background="@drawable/button_google"
        android:contentDescription="@string/login_google_description"
        android:drawableLeft="@drawable/google"
        android:text="@string/login_google_title"
        android:textColor="@color/secondary_text"/>

      <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/copy"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:typeface="roboto_thin"/>

    </LinearLayout>

  </LinearLayout>


</android.support.design.widget.CoordinatorLayout>