<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:text="Hoang Hiepasdasdasddsdsdsdsdsdsdsdsdsdsdsdsdsd"
                app:typeface="roboto_black" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/count_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:text="1000"
                android:textSize="11dp"
                app:typeface="roboto_light" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/detail_toggle_description_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_arrow_drop_down_grey_600_24dp" />
    </LinearLayout>

    <!-- CONTROLS -->
    <LinearLayout
        android:id="@+id/detail_controls_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_thumb_up_vector" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/detail_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="1N"
                android:textSize="12sp"
                app:typeface="roboto_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_thumb_down_vector" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/detail_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="1N"
                android:textSize="12sp"
                app:typeface="roboto_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewDownload"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cloud_download_grey_600_24dp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/detail_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/download"
                android:textSize="12sp"
                app:typeface="roboto_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewPopup"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_picture_in_picture_grey_600_24dp" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/detail_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/popup"
                android:textSize="12sp"
                app:typeface="roboto_light" />
        </LinearLayout>
    </LinearLayout>

    <!--UPLOADER-->
    <FrameLayout
        android:id="@+id/detail_uploader_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="top"
            android:background="@color/cardview_dark_background" />

        <RelativeLayout
            android:id="@+id/detail_uploader_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_uploader_thumbnail_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/bg_splash"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/subscribe"
                android:layout_toRightOf="@+id/detail_uploader_thumbnail_view"
                android:orientation="vertical">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/detail_uploader_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:typeface="roboto_black"
                    tools:ignore="RtlHardcoded"
                    tools:text="Uploader" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/subscribe" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/cardview_dark_background" />

        <Button
            android:id="@+id/detail_uploader_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            tools:visibility="gone" />

    </FrameLayout>
    <!--DESCRIPTIONS-->
    <RelativeLayout
        android:id="@+id/detail_description_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="visible">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_upload_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/video_item_detail_upload_date_text_size"
            android:textStyle="bold"
            app:typeface="roboto_light"
            tools:text="Upload date" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_upload_date_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/video_item_detail_description_text_size"
            app:typeface="roboto_light"
            tools:text="Description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a ultricies ex. Integer sit amet sodales risus. Duis non mi et urna pretium bibendum." />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/cardview_dark_background" />

    </RelativeLayout>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/detail_next_stream_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/next_video_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        app:typeface="roboto_black"
        tools:ignore="RtlHardcoded" />
</LinearLayout>